@@ -1,1 +1,2 @@
+#!/bin/bash
 cat $ESPIDFTOOLS_INSTALLDIR/.custom_bin/help.txt
